--- a/registration.html
+++ b/registration.html
@@ -16,8 +16,8 @@ The above copyright notice and this permission notice shall be included in all c
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Material Kit by Creative Tim
@@ -27,14 +27,14 @@ The above copyright notice and this permission notice shall be included in all c
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
-  <link href="../assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
+  <link href="assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="../assets/demo/demo.css" rel="stylesheet" />
+  <!-- <link href="assets/demo/demo.css" rel="stylesheet" /> -->
 </head>
 
 <body class="login-page sidebar-collapse">
-  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
-    <div class="container">
+  <nav class="navbar  fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+    <!-- <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html">
           Material Kit </a>
@@ -52,13 +52,18 @@ The above copyright notice and this permission notice shall be included in all c
               <i class="material-icons">apps</i> Components
             </a>
             <div class="dropdown-menu dropdown-with-icons">
-              <a href="../index.html" class="dropdown-item">
+              <a href="./index.html" class="dropdown-item">
                 <i class="material-icons">layers</i> All Components
               </a>
               <a href="https://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html" class="dropdown-item">
                 <i class="material-icons">content_paste</i> Documentation
               </a>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
+              <i class="material-icons">cloud_download</i> Download
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.creative-tim.com/product/material-kit-pro" target="_blank">
@@ -82,58 +87,185 @@ The above copyright notice and this permission notice shall be included in all c
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
+    <div class="container">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-translate">
+                <a class="navbar-brand" href="index.html">Incar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </div>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                    <a href="index.html" class="nav-link">
+                      <h4>მთავარი</h4>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="javascript:;" class="nav-link">
+                      <h4>სერვისები</h4>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="javascript:;" class="nav-link">
+                      <h4>გალერია</h4>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="javascript:;" class="nav-link">
+                      <h4>ჩვენს შესახებ</h4>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="javascript:;" class="nav-link">
+                      <h4>სიახლეები</h4>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="javascript:;" class="nav-link">
+                      <h4>კონტაკტი</h4>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="დაგვალაიქე Facebook-ზე">
+                      <i class="fa fa-facebook-square"></i>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#signup-page" class="btn btn-info btn-raised btn-round " >
+                      რეგისტრაცია
+                    <div class="ripple-container"></div></a>
+                  </li>
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </div>
   </nav>
-  <div class="page-header header-filter" style="background-image: url('../assets/img/bg7.jpg'); background-size: cover; background-position: top center;">
+  <div class="page-header page-header_shakalad header-filter header-filter_shakalad clear-filter purple-filter" data-parallax="true" >
+    <div class="container">
+      <div class="row">
+
+      </div>
+    </div>
+  </div>
+  <div class="main main-raised">
+    <div class="section section-basic" style="background-image: url('assets/img/toyota.jpg'); background-size: cover; background-position: top center;">
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 ml-auto mr-auto">
           <div class="card card-login">
-            <form class="form" method="" action="">
-              <div class="card-header card-header-primary text-center">
-                <h4 class="card-title">Login</h4>
-                <div class="social-line">
-                  <a href="#pablo" class="btn btn-just-icon btn-link">
-                    <i class="fa fa-facebook-square"></i>
-                  </a>
-                  <a href="#pablo" class="btn btn-just-icon btn-link">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                  <a href="#pablo" class="btn btn-just-icon btn-link">
-                    <i class="fa fa-google-plus"></i>
-                  </a>
+            <form class="form form_shakalad">
+                <div class="card-header card-header-info text-center">
+                  <h4 class="card-title">დარეგისტრირდით</h4>
+                  <!-- <div class="social-line">
+                    <a href="javascript:;" class="btn btn-just-icon btn-link">
+                      <i class="fa fa-facebook-square"></i>
+                    </a>
+                    <a href="javascript:;" class="btn btn-just-icon btn-link">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="javascript:;" class="btn btn-just-icon btn-link">
+                      <i class="fa fa-google-plus"></i>
+                    </a>
+                  </div> -->
                 </div>
-              </div>
-              <p class="description text-center">Or Be Classical</p>
-              <div class="card-body">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">
-                      <i class="material-icons">face</i>
-                    </span>
+                <p class="description text-center">შეიყვანეთ თქვენი მონაცემები</p>
+                <div class="card-body">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="material-icons">face</i>
+                      </span>
+                    </div>
+                   <div class="form-group bmd-form-group">
+                      <label for="exampleInput1" class="bmd-label-floating">სახელი</label>
+                      <input type="email" class="form-control" id="exampleInput1">
+                      <span class="bmd-help">თქვენი სახელი.</span>
+                    </div>
                   </div>
-                  <input type="text" class="form-control" placeholder="First Name...">
-                </div>
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">
-                      <i class="material-icons">mail</i>
-                    </span>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="material-icons">perm_identity</i>
+                      </span>
+                    </div>
+                   <div class="form-group bmd-form-group">
+                      <label for="exampleInput1" class="bmd-label-floating">გვარი</label>
+                      <input type="email" class="form-control" id="exampleInput1">
+                      <span class="bmd-help">თქვენი გვარი.</span>
+                    </div>
                   </div>
-                  <input type="email" class="form-control" placeholder="Email...">
-                </div>
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">
-                      <i class="material-icons">lock_outline</i>
-                    </span>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="material-icons">perm_contact_calendar</i>
+                      </span>
+                    </div>
+                    <div class="form-group bmd-form-group">
+                      <label for="exampleInput1" class="bmd-label-floating">პირადობის ნომერი</label>
+                      <input type="email" class="form-control" id="exampleInput1">
+                      <span class="bmd-help">თქვენი პირადი ნომერი.</span>
+                    </div>
                   </div>
-                  <input type="password" class="form-control" placeholder="Password...">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="material-icons">phone</i>
+                      </span>
+                    </div>
+                    <div class="form-group bmd-form-group">
+                      <label for="exampleInput1" class="bmd-label-floating">ტელეფონი</label>
+                      <input type="text" class="form-control" id="exampleInput1">
+                      <span class="bmd-help">თქვენი ტელეფონის ნომერი.</span>
+                    </div>
+                  </div>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="material-icons">lock_open</i>
+                      </span>
+                    </div>
+                    <div class="form-group bmd-form-group">
+                      <label for="exampleInput1" class="bmd-label-floating">პაროლი</label>
+                      <input type="password" class="form-control" id="exampleInput1">
+                      <span class="bmd-help">თქვენი პაროლი.</span>
+                    </div>
+                  </div>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="material-icons">lock</i>
+                      </span>
+                    </div>
+                    <div class="form-group bmd-form-group">
+                      <label for="exampleInput1" class="bmd-label-floating">გაიმეორეთ</label>
+                      <input type="password" class="form-control" id="exampleInput1">
+                      <span class="bmd-help">გაიმეორეთ პაროლი.</span>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="footer text-center">
-                <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">Get Started</a>
-              </div>
+                <div class="form-check">
+                  <div class="col-lg-12 col-md-12 col-sm-12">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="checkbox" value="" checked="">
+                      მე ვეთანხმები პირობებს
+                      <span class="form-check-sign">
+                        <span class="check"></span>
+                      </span>
+                    </label>
+                  </div>
+                </div>
+                <!-- <button type="submit" class="btn btn-info btn-lg">რეგისტრაცია</button> -->
+                <div class="col text-center">
+                  <button type="submit" class="btn btn-info btn-round btn-lg">
+                    <i class="material-icons">done_outline</i> რეგისტრაცია
+                  </button>
+                </div>
             </form>
           </div>
         </div>
@@ -175,18 +307,19 @@ The above copyright notice and this permission notice shall be included in all c
       </div>
     </footer>
   </div>
+  </div>
   <!--   Core JS Files   -->
-  <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="../assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="../assets/js/plugins/moment.min.js"></script>
+  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <script src="assets/js/plugins/moment.min.js"></script>
   <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-  <script src="../assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+  <script src="assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
   <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <script src="assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
   <!--  Google Maps Plugin    -->
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-  <script src="../assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
+  <script src="assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
 </body>
 
 </html>
