==Реализовал страгицу login.html

--- a/login.html
+++ b/login.html
@@ -154,14 +154,14 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
   </div>
   <div class="main main-raised">
-    <div class="section section-basic" style="background-image: url('assets/img/toyota.jpg'); background-size: cover; background-position: top center;">
+    <div class="section section-basic" style="background-image: url('assets/img/toyota.jpg'); background-size: cover; background-position: top center; min-height: 100vh;">
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 ml-auto mr-auto">
           <div class="card card-login">
             <form class="form form_shakalad">
                 <div class="card-header card-header-info text-center">
-                  <h4 class="card-title">დარეგისტრირდით</h4>
+                  <h4 class="card-title">შესვლა</h4>
                   <!-- <div class="social-line">
                     <a href="javascript:;" class="btn btn-just-icon btn-link">
                       <i class="fa fa-facebook-square"></i>
@@ -176,30 +176,7 @@ The above copyright notice and this permission notice shall be included in all c
                 </div>
                 <p class="description text-center">შეიყვანეთ თქვენი მონაცემები</p>
                 <div class="card-body">
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="material-icons">face</i>
-                      </span>
-                    </div>
-                   <div class="form-group bmd-form-group">
-                      <label for="exampleInput1" class="bmd-label-floating">სახელი</label>
-                      <input type="email" class="form-control" id="exampleInput1">
-                      <span class="bmd-help">თქვენი სახელი.</span>
-                    </div>
-                  </div>
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="material-icons">perm_identity</i>
-                      </span>
-                    </div>
-                   <div class="form-group bmd-form-group">
-                      <label for="exampleInput1" class="bmd-label-floating">გვარი</label>
-                      <input type="email" class="form-control" id="exampleInput1">
-                      <span class="bmd-help">თქვენი გვარი.</span>
-                    </div>
-                  </div>
+
                   <div class="input-group">
                     <div class="input-group-prepend">
                       <span class="input-group-text">
@@ -208,32 +185,8 @@ The above copyright notice and this permission notice shall be included in all c
                     </div>
                     <div class="form-group bmd-form-group">
                       <label for="exampleInput1" class="bmd-label-floating">პირადობის ნომერი</label>
-                      <input type="email" class="form-control" id="exampleInput1">
-                      <span class="bmd-help">თქვენი პირადი ნომერი.</span>
-                    </div>
-                  </div>
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="material-icons">phone</i>
-                      </span>
-                    </div>
-                    <div class="form-group bmd-form-group">
-                      <label for="exampleInput1" class="bmd-label-floating">ტელეფონი</label>
                       <input type="text" class="form-control" id="exampleInput1">
-                      <span class="bmd-help">თქვენი ტელეფონის ნომერი.</span>
-                    </div>
-                  </div>
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="material-icons">lock_open</i>
-                      </span>
-                    </div>
-                    <div class="form-group bmd-form-group">
-                      <label for="exampleInput1" class="bmd-label-floating">პაროლი</label>
-                      <input type="password" class="form-control" id="exampleInput1">
-                      <span class="bmd-help">თქვენი პაროლი.</span>
+                      <span class="bmd-help">თქვენი პირადი ნომერი.</span>
                     </div>
                   </div>
                   <div class="input-group">
@@ -243,13 +196,13 @@ The above copyright notice and this permission notice shall be included in all c
                       </span>
                     </div>
                     <div class="form-group bmd-form-group">
-                      <label for="exampleInput1" class="bmd-label-floating">გაიმეორეთ</label>
+                      <label for="exampleInput1" class="bmd-label-floating">პაროლი</label>
                       <input type="password" class="form-control" id="exampleInput1">
-                      <span class="bmd-help">გაიმეორეთ პაროლი.</span>
+                      <span class="bmd-help">თქვენი პაროლი.</span>
                     </div>
                   </div>
                 </div>
-                <div class="form-check">
+<!--                 <div class="form-check">
                   <div class="col-lg-12 col-md-12 col-sm-12">
                     <label class="form-check-label">
                       <input class="form-check-input" type="checkbox" value="" checked="">
@@ -259,13 +212,17 @@ The above copyright notice and this permission notice shall be included in all c
                       </span>
                     </label>
                   </div>
-                </div>
+                </div> -->
                 <!-- <button type="submit" class="btn btn-info btn-lg">რეგისტრაცია</button> -->
                 <div class="col text-center">
                   <button type="submit" class="btn btn-info btn-round btn-lg">
-                    <i class="material-icons">done_outline</i> რეგისტრაცია
+                    <i class="material-icons">done_outline</i> შესვლა
                   </button>
                 </div>
+                 <p class="description text-center">არ ხარ დარეგისტრირებული?</p>
+                 <div class="col text-center">
+                   <a class="description text-center" href="registration.html" style="text-decoration: underline; font-size: 1rem;">რეგისტრაცია</a>
+                 </div>
             </form>
           </div>
         </div>
