--- a/index.html
+++ b/index.html
@@ -104,32 +104,32 @@ The above copyright notice and this permission notice shall be included in all c
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
                     <a href="javascript:;" class="nav-link">
-                      <h4>მთავარი</h4>
+                      მთავარი
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="javascript:;" class="nav-link">
-                      <h4>სერვისები</h4>
+                      სერვისები
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="javascript:;" class="nav-link">
-                      <h4>გალერია</h4>
+                      გალერია
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="javascript:;" class="nav-link">
-                      <h4>ჩვენს შესახებ</h4>
+                      ჩვენს შესახებ
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="javascript:;" class="nav-link">
-                      <h4>სიახლეები</h4>
+                      სიახლეები
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="javascript:;" class="nav-link">
-                      <h4>კონტაკტი</h4>
+                      კონტაკტი
                     </a>
                   </li>
                   <li class="nav-item">
@@ -138,7 +138,7 @@ The above copyright notice and this permission notice shall be included in all c
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="btn btn-info btn-raised btn-round " >
+                    <a href="login.html" class="btn btn-info btn-raised btn-round " >
                       პირადი კაბინეტი
                     <div class="ripple-container"></div></a>
                   </li>
